# Parameterized-LNO

./: .gitignore  pyproject.toml
Dynamic Systems/: Basic_wave.py  Basic_wave_second_order.py  Duffing_oscillator.py  parameterized_duffing_oscillator.py
Libraries/: LNO.py  functional_dataloaders.py  parameterized LNO.py
My Code/Libraries/: LES_Sindy.py  functional_dataloaders.py
Parameterized_LNO/: main.py
Parameterized_LNO/Dynamic Systems/: Duffing_oscillator.py
Parameterized_LNO/Libraries/: LNO.py  functional_dataloaders.py  parameterized LNO.py
Testing/: LNO_LES_SINDy_test_harness.py
