[project]
name = "lno-sindy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "findiff>=0.12.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pynput>=1.8.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "sounddevice>=0.5.2",
    "torch>=2.7.0",
]
